Add slide about glossary

--- a/01-introduction.html
+++ b/01-introduction.html
@@ -390,12 +390,22 @@
 
                         <ul>
                             <li>discuss and agree on terminology as a team</li>
-                            <li>create a glossary</li>
                             <li>use one word for a specific concept, and only one concept per word</li>
                             <li>point out imprecision and contradictions</li>
                             <li>update the code as the language evolves</li>
                             <li>avoid the use of acronyms and abbreviations</li>
                         </ul>
+                    </section>
+
+                    <section>
+                        <h2>Create a glossary</h2>
+
+                        <dl>
+                            <dt>glossary</dt>
+                            <dd>an list of terms in a particular domain of knowledge with the definitions for those
+                                terms
+                            </dd>
+                        </dl>
                     </section>
 
                     <section>
