--- a/01-introduction.html
+++ b/01-introduction.html
@@ -458,7 +458,7 @@
                             </li>
                             <li>Tactical design helps creating a rich domain model that captures business logic</li>
                             <li>The ubiquitous language is used by all team members to prevent having to translate
-                                between different technical and domain terminology
+                                between technical and domain terminology
                             </li>
                         </ul>
                     </section>
