Remove ubiquitous language from future presentations

--- a/01-introduction.html
+++ b/01-introduction.html
@@ -103,8 +103,7 @@
                         <ul>
                             <li>Strategic DDD
                                 <ul>
-                                    <li>Ubiquitous language</li>
-                                    <li>Domain, subdomains, bounded contexts<br />&nbsp;</li>
+                                    <li>Domain, subdomains, bounded contexts</li>
                                 </ul>
                             </li>
                             <li>Tactical DDD
