Add screenshots from Behat

--- a/01-introduction.html
+++ b/01-introduction.html
@@ -408,7 +408,7 @@
                     </section>
 
                     <section>
-                        <h2>Use BDD Features / scenarios</h2>
+                        <h2>Use Feature descriptions</h2>
 
                         <pre><code data-trim class="gherkin">
                             Feature: Disabling a checklist
@@ -426,6 +426,18 @@
                                 When I disable the checklist
                                 Then I should get an error
                         </code></pre>
+                    </section>
+
+                    <section>
+                        <h2>Use Feature descriptions</h2>
+
+                        <p><img src="images/behat.png" /></p>
+                    </section>
+
+                    <section>
+                        <h2>Use Feature descriptions</h2>
+
+                        <p><img src="images/behat-fail.png" /></p>
                     </section>
 
                     <section>
