--- a/01-introduction.html
+++ b/01-introduction.html
@@ -75,12 +75,12 @@
                     <section>
                         <h2>Goals of this presentation</h2>
 
-                        <p>After this presentation, you will...</p>
+                        <p>After this presentation, you should...</p>
 
                         <ul>
-                            <li>Know what DDD is</li>
+                            <li>Know what <em>domain-driven design</em> (DDD) is</li>
                             <li>Know the difference between strategic and tactical DDD</li>
-                            <li>Know what a ubiquitous language is</li>
+                            <li>Know what a ubiquitous language is and how to develop one</li>
                         </ul>
                     </section>
 
@@ -91,6 +91,7 @@
 
                         <ul>
                             <li>Improve your collaboration with team members (developers and domain experts)</li>
+                            <li>Produce software that delivers the most value to the business</li>
                             <li>Understand where the heart of the software is and which parts deserve the most attention
                             </li>
                             <li>Design software that is future-proof and can keep up with changing requirements</li>
@@ -99,6 +100,8 @@
 
                     <section>
                         <h2>Future presentations</h2>
+
+                        <p>Will go deeper into other aspects of DDD:</p>
 
                         <ul>
                             <li>Strategic DDD
@@ -119,6 +122,12 @@
 
                     <section>
                         <h2>Structure</h2>
+
+                        <ul>
+                            <li>Introduction to DDD</li>
+                            <li>Strategic vs tactical design</li>
+                            <li>The ubiquitous language</li>
+                        </ul>
                     </section>
                 </section>
 
