--- a/01-introduction.html
+++ b/01-introduction.html
@@ -79,8 +79,8 @@
 
                         <ul>
                             <li>Know what <em>domain-driven design</em> (DDD) is</li>
-                            <li>Know the difference between strategic and tactical DDD</li>
-                            <li>Know what a ubiquitous language is and how to develop one</li>
+                            <li>Know the difference between <em>strategic</em> and <em>tactical</em> DDD</li>
+                            <li>Know what a <em>ubiquitous language</em> is and how to develop one</li>
                         </ul>
                     </section>
 
@@ -92,8 +92,7 @@
                         <ul>
                             <li>Improve your collaboration with team members (developers and domain experts)</li>
                             <li>Produce software that delivers the most value to the business</li>
-                            <li>Understand where the heart of the software is and which parts deserve the most attention
-                            </li>
+                            <li>Find the heart of the software, the part that deserves the most attention</li>
                             <li>Design software that is future-proof and can keep up with changing requirements</li>
                         </ul>
                     </section>
@@ -107,6 +106,7 @@
                             <li>Strategic DDD
                                 <ul>
                                     <li>Domain, subdomains, bounded contexts</li>
+                                    <li>Context maps</li>
                                 </ul>
                             </li>
                             <li>Tactical DDD
@@ -247,6 +247,16 @@
                         </aside>
                     </section>
 
+                    <section data-background-color="#fff" data-background-image="images/yin-yang.jpg"
+                        data-background-size="60%">
+
+                        <aside class="notes">
+                            <ul>
+                                <li>Strategy and tactics should be in balance</li>
+                            </ul>
+                        </aside>
+                    </section>
+
                     <section>
                         <dl>
                             <dt>strategic design</dt>
@@ -335,10 +345,10 @@
                         <ul>
                             <li>constant need to translate from the problem (domain) language to the technical language
                             </li>
-                            <li>people use the same term differently without realizing</li>
-                            <li>information is lost in translation, misaligned concepts are used</li>
-                            <li>developed software misses the point</li>
-                            <li>users will have to compensate</li>
+                            <li class="fragment">people use the same term differently without realizing</li>
+                            <li class="fragment">information is lost in translation, misaligned concepts are used</li>
+                            <li class="fragment">developed software misses the point</li>
+                            <li class="fragment">users will have to compensate</li>
                         </ul>
 
                         <aside class="notes">
@@ -359,7 +369,7 @@
 
                         <p>&nbsp;</p>
 
-                        <dl>
+                        <dl class="fragment">
                             <dt>ubiquitous language</dt>
                             <dd>A shared language developed by the team - a team composed of both domain experts and
                                 software developers.
@@ -371,17 +381,17 @@
                         <h2>Characteristics</h2>
 
                         <ul>
-                            <li>used everywhere:
+                            <li class="fragment">used everywhere:
                                 <ul>
-                                    <li>in user stories (post-its, Jira)</li>
-                                    <li>during discussions, backlog refinements, etc.</li>
-                                    <li>in documentation</li>
-                                    <li>in automated tests</li>
-                                    <li>last but not least, in the source code</li>
+                                    <li class="fragment">in user stories (post-its, Jira)</li>
+                                    <li class="fragment">during discussions, backlog refinements, etc.</li>
+                                    <li class="fragment">in documentation</li>
+                                    <li class="fragment">in automated tests</li>
+                                    <li class="fragment">last but not least, in the source code</li>
                                 </ul>
                             </li>
-                            <li>used by everyone on the team: developers and domain experts</li>
-                            <li>evolves over time as new concepts are discovered</li>
+                            <li class="fragment">used by everyone on the team: developers and domain experts</li>
+                            <li class="fragment">evolves over time as new concepts are discovered</li>
                         </ul>
                     </section>
 
@@ -397,18 +407,18 @@
                         <h2>How to develop a ubiquitous language?</h2>
 
                         <ul>
-                            <li>discuss and agree on terminology as a team</li>
-                            <li>use one word for a specific concept, and only one concept per word</li>
-                            <li>point out imprecision and contradictions</li>
-                            <li>update the code as the language evolves</li>
-                            <li>avoid the use of acronyms and abbreviations</li>
+                            <li class="fragment">discuss and agree on terminology as a team</li>
+                            <li class="fragment">use one word for a specific concept, and only one concept per word</li>
+                            <li class="fragment">point out imprecision and contradictions</li>
+                            <li class="fragment">update the code as the language evolves</li>
+                            <li class="fragment">avoid the use of acronyms and abbreviations</li>
                         </ul>
                     </section>
 
                     <section>
                         <h2>Create a glossary</h2>
 
-                        <dl>
+                        <dl class="fragment">
                             <dt>glossary</dt>
                             <dd>an list of terms in a particular domain of knowledge with the definitions for those
                                 terms
@@ -480,6 +490,14 @@
                             <li>The ubiquitous language is used by all team members to prevent having to translate
                                 between technical and domain terminology
                             </li>
+                        </ul>
+                    </section>
+
+                    <section>
+                        <h2>Following presentations</h2>
+
+                        <ul>
+                            <li>Will go deeper into the other strategic and tactical patterns</li>
                         </ul>
                     </section>
                 </section>
